src/app/map/map-grid/map-grid.component.scss
// todo - create separate file for animation keyframes
@keyframes elevate {
    0% {
        transform: scale(1.5) rotate(90deg);
    }
    100% {
        transform: scale(1) rotate(180deg);
    }
}

@keyframes appear {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 1;
    }
}


.container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    position: absolute; top: 0; left: 0;

    .wrapper {
        --nodesize: 0.5rem;

        height: 100%;
        width: 100%;
        display: flex;
        flex-direction: column;
        overflow: hidden;
        
        .row {
            display: flex;
            flex-direction: row;
    
            .column {
                display: flex;
                flex-direction: row;
                width: var(--nodesize);
                height: var(--nodesize);
                background-color: white;
                position: relative;

                .node {
                    --zIndex: 0;
                    --borderRadius: '0.1rem';
                    --animation: 'none';
                    --pseudoAnimaiton: 'none';
                    --backgroundColor: 'black';
                    --boxShadow: 'none';
                    --cursor: 'default';

                    position: absolute;
                    top: 0;
                    left: 0;
                    width: var(--nodesize);
                    height: var(--nodesize);
                    animation: var(--animation);
                    z-index: var(--zIndex);
                    border-radius: var(--borderRadius);
                    background-color: var(--backgroundColor);
                    box-shadow: var(--boxShadow);

                    &::after {
                        content: '';
                        position: absolute;
                        width: calc(var(--nodesize));
                        height: calc(var(--nodesize));
                        border-radius: var(--borderRadius);
                        background-color: rgb(192,192,192);
                        opacity: 0;
                        animation: var(--pseudoAnimaiton);
                        cursor: var(--cursor);
                    }
                }

                .start-destination-node {
                    position: absolute;
                    top: 0;
                    left: 0;
                    width: var(--nodesize);
                    height: var(--nodesize);
                    background-color: black;
                    z-index: 31;
                    cursor: grab;

                    &:active {
                        cursor: grabbing;
                    }
                }
            }
        }
    }
}

